--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-    <name>bolt</name>
+    <name>teststand</name>
     <version>1.0.0</version>
-    <description>Drivers and interfaces to the Bolt robot.</description>
+    <description>Drivers and interfaces to the Teststand robot.</description>
     <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
     <license>BSD-3-clause</license>
 
@@ -16,7 +16,7 @@
     <depend>real_time_tools</depend>
     <depend>yaml_utils</depend>
     <depend>PythonModules</depend>
-    <depend>robot_properties_bolt</depend>
+    <depend>robot_properties_teststand</depend>
     <depend>dynamic_graph_manager</depend>
 
     <export>
