--- a/package.xml
+++ b/package.xml
@@ -11,14 +11,16 @@
 
     <depend>mpi_cmake_modules</depend>
     <depend>pybind11</depend>
-    <depend>ati_ft_sensor</depend>
     <depend>blmc_drivers</depend>
+    <depend>slider_box</depend>
     <depend>odri_control_interface</depend>
     <depend>real_time_tools</depend>
     <depend>yaml_utils</depend>
     <depend>PythonModules</depend>
     <depend>robot_properties_teststand</depend>
     <depend>dynamic_graph_manager</depend>
+    <build_depend>rclcpp</build_depend>
+    <build_depend>rclcpp_components</build_depend>
 
     <export>
         <build_type>ament_cmake</build_type>
